[gd_scene load_steps=13 format=3 uid="uid://bm6abfwd2sfr7"]

[ext_resource type="Script" path="res://assets/scenes/secrets/bart_bash.gd" id="1_nwymm"]
[ext_resource type="Texture2D" uid="uid://c1mfyqd0cfj43" path="res://assets/graphics/blacksquare.png" id="2_eo84d"]
[ext_resource type="Texture2D" uid="uid://b41nat5u0sxeb" path="res://assets/graphics/ontotexture.png" id="2_x1g6k"]
[ext_resource type="FontFile" uid="uid://b4m41kepb4uy0" path="res://assets/fonts/COMIC.TTF" id="3_x810q"]
[ext_resource type="Texture2D" uid="uid://cuc4vs05vavbn" path="res://assets/graphics/BartBGs/Blue_hills_(Windows_XP).jpg" id="4_6weun"]
[ext_resource type="Texture2D" uid="uid://bftc72e6h7ock" path="res://assets/graphics/tiles.png" id="4_10uye"]
[ext_resource type="AudioStream" uid="uid://c6ngdnccey5ek" path="res://assets/sounds/sfxCongrats.ogg" id="4_l3rk4"]
[ext_resource type="Texture2D" uid="uid://c1mgk13ubthqw" path="res://assets/graphics/clickallbarts.png" id="5_d000s"]
[ext_resource type="AudioStream" uid="uid://hxirch1sqa3h" path="res://assets/music/SecretBartBashTheme.ogg" id="5_ftxcv"]
[ext_resource type="FontFile" uid="uid://dfaxht05o8gpo" path="res://assets/fonts/impact.ttf" id="6_mnawf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_45h0p"]
texture = ExtResource("4_10uye")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_t0gsh"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_45h0p")

[node name="BartBash" type="Node2D"]
z_index = 20
script = ExtResource("1_nwymm")

[node name="Sprite2D3" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(128, 256)
scale = Vector2(128, 256)
texture = ExtResource("2_eo84d")

[node name="Sprite2D2" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(512, -448)
texture = ExtResource("2_x1g6k")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(512, 288)
scale = Vector2(0.64, 0.746667)
texture = ExtResource("4_6weun")

[node name="clickallbarts" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(512, 288)
scale = Vector2(0.361582, 0.351648)
texture = ExtResource("5_d000s")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_t0gsh")
format = 2
layer_0/tile_data = PackedInt32Array(2097169, 0, 0, 2097170, 0, 0, 2097171, 0, 0, 2097172, 0, 0, 2097173, 0, 0, 2097174, 0, 0, 2097175, 0, 0, 2097176, 0, 0, 2097177, 0, 0, 2097178, 0, 0, 2097179, 0, 0, 2097180, 0, 0, 2097181, 0, 0, 2097182, 0, 0, 2097183, 0, 0, 2097184, 0, 0, 2097185, 0, 0, 2097186, 0, 0, 2097187, 0, 0, 2097188, 0, 0, 2097189, 0, 0, 2097190, 0, 0, 2097191, 0, 0, 2097192, 0, 0, 2097193, 0, 0, 2097194, 0, 0, 2097195, 0, 0, 2097196, 0, 0, 2097197, 0, 0, 2097198, 0, 0, 2097199, 0, 0, 2097200, 0, 0, 2031664, 0, 0, 1966128, 0, 0, 1900592, 0, 0, 1835056, 0, 0, 1769520, 0, 0, 1703984, 0, 0, 1638448, 0, 0, 1572912, 0, 0, 1507376, 0, 0, 1441840, 0, 0, 1376304, 0, 0, 1310768, 0, 0, 1245232, 0, 0, 1179696, 0, 0, 1114160, 0, 0, 1048624, 0, 0, 983088, 0, 0, 917552, 0, 0, 852016, 0, 0, 786480, 0, 0, 720944, 0, 0, 655408, 0, 0, 589872, 0, 0, 524336, 0, 0, 458800, 0, 0, 393264, 0, 0, 327728, 0, 0, 262192, 0, 0, 196656, 0, 0, 2097167, 0, 0, 2031631, 0, 0, 1966095, 0, 0, 1900559, 0, 0, 1835023, 0, 0, 1769487, 0, 0, 1703951, 0, 0, 1638415, 0, 0, 1572879, 0, 0, 1507343, 0, 0, 1441807, 0, 0, 1376271, 0, 0, 1310735, 0, 0, 1245199, 0, 0, 1179663, 0, 0, 1114127, 0, 0, 1048591, 0, 0, 983055, 0, 0, 917519, 0, 0, 851983, 0, 0, 786447, 0, 0, 720911, 0, 0, 2097168, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0, 196652, 0, 0, 196653, 0, 0, 196654, 0, 0, 196655, 0, 0)

[node name="Objects" type="Node2D" parent="."]

[node name="HUD" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameTitle" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 240.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("6_mnawf")
theme_override_font_sizes/font_size = 50
text = "Bart Bash"
vertical_alignment = 1

[node name="Timer" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 384.0
offset_right = 640.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("6_mnawf")
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Round" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 16.0
offset_top = 128.0
offset_right = 144.0
offset_bottom = 192.0
theme_override_fonts/font = ExtResource("3_x810q")
theme_override_font_sizes/font_size = 20
text = "ROUND 0"
vertical_alignment = 1

[node name="BartsLeft" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 16.0
offset_top = 192.0
offset_right = 208.0
offset_bottom = 256.0
theme_override_fonts/font = ExtResource("3_x810q")
theme_override_font_sizes/font_size = 20
text = "Barts Left: 0"
vertical_alignment = 1

[node name="Score" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 16.0
offset_top = 256.0
offset_right = 208.0
offset_bottom = 320.0
theme_override_fonts/font = ExtResource("3_x810q")
theme_override_font_sizes/font_size = 20
text = "Score: 0"
vertical_alignment = 1

[node name="GameOver" type="Label" parent="."]
visible = false
offset_left = 320.0
offset_top = 192.0
offset_right = 473.0
offset_bottom = 285.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_x810q")
theme_override_font_sizes/font_size = 20
text = "GAME OVER

\"Eat my shorts!\""
vertical_alignment = 1

[node name="Sounds" type="Node" parent="."]

[node name="sfxCongrats" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_l3rk4")

[node name="Music" type="Node" parent="."]

[node name="midiChuckle" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("5_ftxcv")
